# Flux-

./: .gitignore  Build_Linux.sh  CMakeLists.txt  GIT_FLOW.md  README.md  README_summary.md  action_items.md  analysis_steps.txt  build.bat  ci_workflows.md  code_quality_summary.txt  deps_node.txt  deps_other.txt  deps_py.txt  file_ext_counts.txt  final_report_kr.md  gui_test.fx  install.bat  lincense_report.txt  loc_summary.txt  method_test.fx  oop_test.fx  repo_file_list.txt  repo_files_with_size.txt  repo_top20_by_size.txt  test.fx  top20_by_loc.txt  uninstall.bat
flux-pkg/: main.cpp
flux_test_folder/: hello.txt
include/: AST.h  Chunk.h  Compiler.h  Environment.h  FluxModule.h  GUI.h  Interpreter.h  Lexer.h  OpCode.h  Parser.h  Platform.h  Token.h  VM.h  Value.h  Version.h
logs/: creation_note.txt  secrets_log_summary.txt
modules_src/math/: math.cpp
scripts/: AI_BUILD_GUIDE.md  cross_compile.sh
src/: Compiler.cpp  GUI.cpp  Interpreter.cpp  Lexer.cpp  Parser.cpp  Platform.cpp  VM.cpp  main.cpp
test/: gui_raylib_demo.fx  test.fx
tests/: minimal.fx  module_test.fx
